novos links - com correcoes

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           <p lang="pt">TwitData é um simples aplicativo web que geolocaliza tweets em um mapa - permitindo buscas por usuário, hashtag ou trending topic. É uma maneira rápida de descobrir sobre o que estão falando em algum lugar, ou onde estão falando de algo.</p>
           <p lang="en" style="display:none;">TwitData is a simple web application that geolocates tweets on a map - wether you search by user, hashtag or trending topics. It’s a simple and fast way to find out what user are talking about somewhere - or where they are talking about something.</p>
           <!-- links -->
-          <a lang="pt" class="project-link" href="twit-data-production.up.railway.app">Visitar</a>
-          <a lang="en" style="display:none;"class="project-link" href="https://twit-data.herokuapp.com/">Check it out</a>
+          <a lang="pt" class="project-link" href="https://twit-data-production.up.railway.app/">Visitar</a>
+          <a lang="en" style="display:none;"class="project-link" href="https://twit-data-production.up.railway.app/">Check it out</a>
         </div>
       </div>
 
@@ -154,7 +154,7 @@
           <p lang="pt">O YouTube Data é uma ferramenta web que faz simples coletas e visualizações de dados atravéas da API do YouTube, mostrando os videos mais recomendados para um tópico específico. Também possui uma função de análise de redes sem a necessidade de baixar os dados.</p>
           <p lang="en" style="display:none;">YouTube Data is a web application to make simple data collections as visualizations via the YouTube API, showing what videos are more recommended for a specific search query. It also has a networks analisys function that don't require downloading the data.</p>
           <!-- links -->
-          <a lang="pt" class="project-link" href="hhttps://j6gabe.deta.dev/">Visitar</a>
+          <a lang="pt" class="project-link" href="https://j6gabe.deta.dev/">Visitar</a>
           <a lang="en" style="display:none;"class="project-link" href="https://j6gabe.deta.dev/">Check it out</a>
         </div>
       </div>
@@ -242,8 +242,8 @@
            <p lang="pt">Site para a Pinocchio’s Pizza, um restaurante italiano em Cambridge, MA. Conta com recursos de e-commerce como carrinho de compras, e também permite aos administradores fazer atualizações no menu via um painel. Criado com Python e Django.</p>
            <p lang="en" style="display:none;">Website for Pinocchio’s Pizza, an italian restaurant in Cambridge, MA. Has typical e-commerce features like shopping carts, and also allows the admins to make changes to the menu via a panel. Built using Python and Django.</p>
            <!-- Links -->
-           <a lang="pt" class="project-link" href="pizza.up.railway.app">Visitar</a>
-           <a lang="en" style="display:none;"class="project-link" href="pizza.up.railway.app">Yummy!</a>
+           <a lang="pt" class="project-link" href="https://pizza.up.railway.app">Visitar</a>
+           <a lang="en" style="display:none;"class="project-link" href="https://pizza.up.railway.app">Yummy!</a>
          </div>
        </div>
 
@@ -276,8 +276,8 @@
           <p lang="pt">Um aplicativo web simples para avaliar os livros que você gosta. Criado com Python, Flask e PostgreSQL.</p>
           <p lang="en" style="display:none;">A simple web app to review the books that you like. Built using Python, Flask and PostgreSQL.</p>
           <!-- Links -->
-          <a lang="pt" class="project-link" href="book-book.up.railway.app">Visitar</a>
-          <a lang="en" style="display:none;" class="project-link" href="book-book.up.railway.app">Visit</a>
+          <a lang="pt" class="project-link" href="https://book-book.up.railway.app">Visitar</a>
+          <a lang="en" style="display:none;" class="project-link" href="https://book-book.up.railway.app">Visit</a>
 
     </section>
 
